--- a/Assignment1.css
+++ b/Assignment1.css
@@ -9,6 +9,7 @@ body, html {
 
 .navbar {
     display: flex;
+    font: 1em sans-serif;
     justify-content: space-between;
     background-color: #ffffff;
     color: #a28e50;
@@ -19,7 +20,8 @@ body, html {
     top: 0;
     z-index: 1000;
     position: fixed; /* Change this line */
-
+    font-size: 0.8em;
+    font-weight: 550;
 
 }
 .navbar a {
@@ -29,10 +31,14 @@ body, html {
     text-decoration: none;
 }
 .navbar .home-button {
-    color: #6b5e43; 
+    color: #7b6a40; 
 }
 
 .centered-text {
+    letter-spacing: 10px; 
+    line-height: 1.7;
+    font-weight: 600;
+    font-family: Garamond;
     position: absolute; 
     top: 50%;
     left: 50%;
@@ -113,6 +119,14 @@ html,body {
     object-fit: cover;
     padding: 80px 40px 80px 40px;
 }
+
+#img3{
+    flex: 1 1 auto;
+    width: 320px; /* Adjust as needed */
+    height: 550px;
+    object-fit: cover;
+    padding: 20px 10px 0px 550px;
+}
   
 
 .testimonial-section {
@@ -142,6 +156,7 @@ html,body {
 }
 
 .testimonial-text {
+    font-family: Garamond;
     font-size: 3em;
     margin: 40px 150px 40px 150px;
 }
@@ -150,4 +165,167 @@ html,body {
     font-size: 1em;
     font-style: italic;
     color: #aa9157;
+    font: 1em sans-serif;
+
 }
+
+
+/* CSS code for the footer */
+.footer-container {
+    background-color: #af9453; /* Tan color */
+    color: #ffffff; /* White text color */
+    padding: 20px 20px 20px 20px;
+    display: flex;
+    justify-content: flex-start; /* Change this line */
+    align-items: center;
+    font: 1em sans-serif;
+    font-weight: 700;
+    margin-bottom: 50px; /* Add this line */
+}
+
+.footer-address {
+    color: #ffffff; /* Dark text for readability */
+    font-size: 14px;
+    padding: 20px 0px 20px 20px; /* Add some padding to the right */
+    
+}
+
+.footer-address .bordered-content p {
+    margin: 5px 0; /* Adjust this value as needed */
+}
+
+.footer-contact-info {
+    color: #ffffff; /* Dark text for readability */
+    font-size: 14px;
+    padding: 20px 10px 20px 20px; /* Add some padding to the right */
+    
+}
+
+.footer-contact-info .bordered-content p {
+    margin: 5px 0; /* Adjust this value as needed */
+}
+.footer-copy-right {
+    color: #ffffff; /* Dark text for readability */
+    font-size: 14px;
+    padding: 0px 200px 20px 0px;
+    margin-top: -25px; /* Move the text higher */
+
+}
+.footer-cta-button button {
+    background-color: #af9453; /* Dark background for the button */
+    color: #ffffff; /* White text for the button */
+    border: 2px solid #ffffff; /* Add a white border */
+    padding: 15px 20px 15px 20px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    /* margin-left: -20px; Move the button to the left */
+
+}
+
+.footer-cta-button button:hover {
+    background-color: #ffffff; /* Darken the button on hover */
+}
+
+
+.footer-address .bordered-content,
+.footer-contact-info .bordered-content {
+   border-right: 2px solid #ffffff;
+   display: inline-block;
+   padding: 15px;
+}
+
+.btn {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    background-color: #af9453; /* Dark background for the button */
+    color: #ffffff; /* White text for the button */
+    border: 2px solid #ffffff; /* Add a white border */
+    padding: 15px 20px 15px 20px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    font-size: 16px;
+    padding: 12px 24px;
+    cursor: pointer;
+    margin: 100px 0px 0px 267px;
+  }
+
+  .button-text {
+    position: absolute;
+    font: 1em sans-serif;
+    letter-spacing: 10px; 
+    font-size: xx-large;
+    font-weight: 400;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    margin: -200px 0px 0px 267px;
+}
+
+.button-text2 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font: Garamond;
+    letter-spacing: 10px; 
+    font-size: large;
+    line-height: 2;
+    font-weight: 500;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    margin: 0px 0px 0px 267px;
+}
+
+.button-text-img1 {
+    font: Garamond;
+    letter-spacing: 2px;
+    font-size: large;
+    line-height: 2;
+    font-weight: 500;
+    color: #fffbee;
+    position: absolute;
+    text-align: center;
+    margin-top: 20px;  
+    margin-left: 30px; 
+    z-index: 1;
+    margin: 270px 0px 0px 70px;
+
+}
+
+.button-text-img2 {
+    font: 1em sans-serif;
+    letter-spacing: 10px; 
+    font-size: x-large;
+    color: #fffbee;
+    font-weight: 400;
+    position: absolute;
+    margin-top: 50px;  
+    margin-left: 30px; 
+    z-index: 1;
+    margin: 150px 0px 0px 70px;
+
+}
+
+.button-img1 {
+    background-color: #af9453; /* Dark background for the button */
+    color: #ffffff; /* White text for the button */
+    border: 2px solid #ffffff; /* Add a white border */
+    padding: 15px 20px 15px 20px;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    cursor: pointer;
+    transition: background-color 0.3s;
+    font-size: 16px;
+    padding: 12px 24px;
+    cursor: pointer;
+    position: absolute;
+    margin-top: 50px;  
+    margin-left: 30px; 
+    z-index: 1;
+    margin: 400px 0px 0px 165px;
+
+}
+
