--- a/Assignment1-551290.css
+++ b/Assignment1-551290.css
@@ -19,7 +19,7 @@ body, html {
     position: sticky;
     top: 0;
     z-index: 1000;
-    position: fixed; /* Change this line */
+    position: fixed; 
     font-size: 0.8em;
     font-weight: 550;
 
@@ -70,13 +70,14 @@ html,body {
 }
 .fixed-bg {
     background-attachment: fixed;
-    background-repeat: no-repeat;
     background-size: cover;
-    background-position: center center;
     width: 100%;
     text-align: center;
     display: table;
+	background-position: center center;
     background-size: 1000px;
+	background-repeat: no-repeat;
+
 }
 .bg-1 {
     background-image: url('Assets/Assignment1/image3.png');
@@ -106,7 +107,7 @@ html,body {
 
 #img1{
     flex: 1 1 auto;
-    width: 150px; /* Adjust as needed */
+    width: 150px; 
     height: 400px;
     object-fit: cover;
     padding: 80px 20px 80px 40px;
@@ -114,7 +115,7 @@ html,body {
 
 #img2{
     flex: 1 1 auto;
-    width: 500px; /* Adjust as needed */
+    width: 500px; 
     height: 400px;
     object-fit: cover;
     padding: 80px 40px 80px 40px;
@@ -122,7 +123,7 @@ html,body {
 
 #img3{
     flex: 1 1 auto;
-    width: 300px; /* Adjust as needed */
+    width: 300px; 
     height: 550px;
     object-fit: cover;
     padding: 40px 10px 0px 560px;
@@ -170,51 +171,51 @@ html,body {
 }
 
 
-/* CSS code for the footer */
+/* CSS code for footer */
 .footer-container {
-    background-color: #af9453; /* Tan color */
-    color: #ffffff; /* White text color */
+    background-color: #af9453; 
+    color: #ffffff; 
     padding: 20px 20px 20px 20px;
     display: flex;
-    justify-content: flex-start; /* Change this line */
+    justify-content: flex-start; 
     align-items: center;
     font: 1em sans-serif;
     font-weight: 700;
-    margin-bottom: 50px; /* Add this line */
+    margin-bottom: 50px; 
 }
 
 .footer-address {
-    color: #ffffff; /* Dark text for readability */
+    color: #ffffff; 
     font-size: 14px;
-    padding: 20px 0px 20px 20px; /* Add some padding to the right */
+    padding: 20px 0px 20px 20px; 
     
 }
 
 .footer-address .bordered-content p {
-    margin: 5px 0; /* Adjust this value as needed */
+    margin: 5px 0;
 }
 
 .footer-contact-info {
-    color: #ffffff; /* Dark text for readability */
+    color: #ffffff;
     font-size: 14px;
-    padding: 20px 10px 20px 20px; /* Add some padding to the right */
+    padding: 20px 10px 20px 20px;
     
 }
 
 .footer-contact-info .bordered-content p {
-    margin: 5px 0; /* Adjust this value as needed */
+    margin: 5px 0; 
 }
 .footer-copy-right {
-    color: #ffffff; /* Dark text for readability */
+    color: #ffffff;
     font-size: 14px;
     padding: 0px 200px 20px 0px;
-    margin-top: -25px; /* Move the text higher */
+    margin-top: -25px;
 
 }
 .footer-cta-button button {
-    background-color: #af9453; /* Dark background for the button */
-    color: #ffffff; /* White text for the button */
-    border: 2px solid #ffffff; /* Add a white border */
+    background-color: #af9453;
+    color: #ffffff;
+    border: 2px solid #ffffff;
     padding: 15px 20px 15px 20px;
     cursor: pointer;
     transition: background-color 0.3s;
@@ -223,7 +224,7 @@ html,body {
 }
 
 .footer-cta-button button:hover {
-    background-color: #ffffff; /* Darken the button on hover */
+    background-color: #ffffff; 
 }
 
 
@@ -240,9 +241,9 @@ html,body {
     left: 50%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
-    background-color: #af9453; /* Dark background for the button */
-    color: #ffffff; /* White text for the button */
-    border: 1px solid #ffffff; /* Add a white border */
+    background-color: #af9453; 
+    color: #ffffff; 
+    border: 1px solid #ffffff; 
     padding: 15px 20px 15px 20px;
     cursor: pointer;
     transition: background-color 0.3s;
@@ -312,9 +313,9 @@ html,body {
 }
 
 .button-img1 {
-    background-color: #af9453; /* Dark background for the button */
-    color: #ffffff; /* White text for the button */
-    border: 1px solid #ffffff; /* Add a white border */
+    background-color: #af9453; 
+    color: #ffffff; 
+    border: 1px solid #ffffff; 
     padding: 15px 20x 15px 20px;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
@@ -332,6 +333,6 @@ html,body {
 }
 
 a:hover {
-    color: #af9453; /* Change this to the color you want */
+    color: #af9453; 
 }
 
